Bug 1248148 - Disable firing selection events during HTML editor initialization; r=mystor

This is similar to what we do for the plaintext editor initialization.